# flashback

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  create_archive.sh  docker-compose.external-db.yml  docker-compose.prod.yml  docker-compose.yml  init.sql  storehaus.docker.toml  storehaus.toml
backend/: Cargo.toml  Dockerfile
backend/src/: l10n.rs  lib.rs  main.rs
backend/src/api/: mod.rs  router.rs
backend/src/api/handlers/: admin.rs  analytics.rs  auth.rs  conversations.rs  export.rs  health.rs  messages.rs  mod.rs  settings.rs  telegram_photo.rs  telegram_users.rs  templates.rs  users.rs
backend/src/api/middleware/: admin.rs  auth.rs  cors.rs  mod.rs
backend/src/config/: app_config.rs  mod.rs
backend/src/db/: init.rs  mod.rs
backend/src/errors/: api_error.rs  mod.rs
backend/src/models/: conversation.rs  message.rs  message_edit.rs  mod.rs  settings.rs  telegram_user.rs  template.rs  user.rs
backend/src/services/: mod.rs
backend/src/telegram/: bot.rs  bot_manager.rs  commands.rs  handlers.rs  mod.rs
backend/src/utils/: jwt.rs  mod.rs
backend/src/websocket/: events.rs  handler.rs  manager.rs  mod.rs
docs/: API.md  ARCHITECTURE.md  DATABASE.md  QUICKSTART.md  TECH_STACK.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
frontend/src/api/: auth.ts  client.ts  conversations.ts  index.ts  messages.ts  operators.ts  settings.ts  templates.ts  users.ts
frontend/src/components/chat/: ChatHeader.tsx  ChatWindow.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx  TemplateSelector.tsx  TypingIndicator.tsx  index.ts
frontend/src/components/common/: ConfirmDialog.tsx  Dropdown.tsx  index.ts
frontend/src/components/conversations/: ConversationFilters.tsx  ConversationItem.tsx  ConversationList.tsx  SwipeableConversationItem.tsx  index.ts
frontend/src/components/layout/: AppLayout.tsx  MobileNavigation.tsx  index.ts  (+1 more)
frontend/src/contexts/: ThemeContext.tsx
frontend/src/hooks/: index.ts  useBotStatus.ts  useConnectionStatus.ts  useConversations.ts  useCurrentUser.ts  useMessages.ts  useNotifications.ts  useTemplates.ts  useTypingStatus.ts  useUnreadCount.ts  useWebSocket.ts  useWebSocketEvent.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: AdminPage.tsx  ConversationsPage.tsx  DashboardPage.tsx  LoginPage.tsx  ProfilePage.tsx  SettingsPage.tsx  TemplatesPage.tsx
frontend/src/services/: notificationService.ts  soundService.ts
frontend/src/store/: auth.ts  websocket.ts
frontend/src/types/: api.ts  websocket.ts
frontend/src/ws/: client.ts
locales/backend/: en.json  ru.json
locales/frontend/: en.json  ru.json
scripts/: README.md  generate-secrets.sh  logs.sh  restart-prod.sh  restart.sh  setup-database.sh  start-prod.sh  start.sh  stop-prod.sh  stop.sh
scripts/sql/: 01_init_database.sql  02_create_indexes.sql
(+5 files in other folders)
