[package]
name = "flashback-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[[bin]]
name = "flashback-backend"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { workspace = true }
tower-http = { workspace = true }

# Telegram Bot
teloxide = { workspace = true }

# Database & Events
storehaus = { workspace = true }
watchtower = { workspace = true }

# Peer dependencies for StoreHaus macros
sqlx = { workspace = true }
async-trait = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Authentication
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }

# UUID
uuid = { workspace = true }

# Date/Time
chrono = { workspace = true }

# Environment
dotenv = { workspace = true }

# Logging & Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Lazy static initialization
once_cell = { workspace = true }

# TOML parsing
toml = "0.8"

# CLI argument parsing
clap = { workspace = true }

[features]
# Enable debug logging for storehaus and watchtower
debug-logging = ["storehaus/debug-logging", "watchtower/debug-logging"]
